# consensus-best-songs-2025

./: .gitignore  AGENTS.md  ARTISTS.md  CLAUDE_OPUS_RETROSPECTIVE.md  EXCLUSIVE_SONGS.md  LICENSE  README.md  TODO.md  data.json  index.html  ranking_engine.py  script.js  site.webmanifest
.cursor/: environment.json
.github/workflows/: claude-code-review.yml  lint-json.yml  test.yml
python/: pyproject.toml
python/notebooks/: best_songs_merge.ipynb  manual_overrides.csv  ranking_engine.py  sources.py  ytm_manual_overrides.csv
python/notebooks/caches/: anthropic_extract_quote_cache.json  apple_music_cache.json  quote_result_df.csv  quote_row_per_song.csv  quote_sample.csv  spotify_artist0_cache.json
python/scripts/: test-docker.sh
python/tests/: conftest.py  ranking_helpers.py  test_about_modal.py  test_accessibility.py  test_core_loading.py  test_data_json.py  test_export_modal.py  test_playlist_features.py  test_ranking_engine.py  test_ranking_logic.py  test_reviews_modal.py  test_score_accuracy.py  test_settings_modal.py  test_song_filters.py  test_song_rendering.py  test_stats_modal.py  test_theme_styles.py  test_theme_switcher.py  test_theme_visual.py  test_tuned_badge.py
python/tests/testdata/: test_data.json
samples/: sample_data.json  song_sample.html
