[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "anthropic>=0.75.0",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "instructor>=1.13.0",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "jwt>=1.4.0",
    "kaleido==0.2.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
    "pytest-playwright-visual>=2.1.2",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "spotipy>=2.25.2",
    "tqdm>=4.67.1",
    "ytmusicapi>=1.11.4",
    "axe-playwright-python>=0.1.4",
]
[tool.uv]
constraint-dependencies = ["kaleido!=0.2.1.post1"]

[tool.pytest.ini_options]
markers = [
    "visual: visual regression tests that require Docker for consistent rendering",
]
